--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
-    "morgan": "^1.10.0"
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.10",
+    "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^2.6.5"
   },
   "devDependencies": {
-    "eslint": "^7.7.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "mocha": "^8.1.2",
+    "mocha": "^9.1.2",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
   }
