--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.4.1",
     "helmet": "^4.1.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.10",
